Removed dead code, and unnecessary transient on locker.
git-svn-id: file:///Users/andrewregan/Development/SVN/repos/trunk/Bloggers4Labour@131 aa2b285a-0eb0-49ca-9bdb-c93b1c50f45f